change asset path

--- a/home.html
+++ b/home.html
@@ -21,14 +21,14 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black"> -->
         <meta name="format-detection" content="telephone=no">
-        <link rel="apple-touch-icon-precomposed" href="assets/build/img/apple-icon.png" size="152x152">
+        <link rel="apple-touch-icon-precomposed" href="assets/img/apple-icon.png" size="152x152">
 
         <!-- Change the title -->
         <title>front-end starter kit</title>
         
-        <link rel="icon" type="image/png" href="assets/build/img/favicon.png">
-        <link rel="stylesheet" href="assets/build/css/main.css">
-        <script src="assets/build/js/vendor/modernizr.min.js"></script>
+        <link rel="icon" type="image/png" href="assets/img/favicon.png">
+        <link rel="stylesheet" href="assets/css/main.css">
+        <script src="assets/js/vendor/modernizr.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -40,9 +40,9 @@
         <!-- Remove comment once lived
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         -->
-        <script>window.jQuery || document.write('<script src="assets/build/js/vendor/jquery.min.js"><\/script>')</script>
-        <script src="assets/build/js/vendor/fastclick.min.js"></script>
+        <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery.min.js"><\/script>')</script>
+        <script src="assets/js/vendor/fastclick.min.js"></script>
 
-        <script src="assets/build/js/main.min.js"></script>
+        <script src="assets/js/main.min.js"></script>
     </body>
 </html>
