--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black"> -->
         <meta name="format-detection" content="telephone=no">
-        <link rel="apple-touch-icon-precomposed" href="assets/img/apple-icon.png" size="152x152">
+        <link rel="apple-touch-icon-precomposed" href="assets/img/apple-icon.png" sizes="152x152">
 
         <!-- Change the title -->
         <title>front-end starter kit</title>
