--- a/home.html
+++ b/home.html
@@ -36,7 +36,8 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery.min.js"><\/script>')</script>
         <script src="assets/js/vendor/fastclick.min.js"></script>
-
+        
+        <script>window.myPrefix = '';</script>
         <script src="assets/js/main.min.js"></script>
     </body>
 </html>
