--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="format-detection" content="telephone=no">
         
-        <link rel="apple-touch-icon-precomposed" href="assets/img/apple-icon.png" sizes="152x152">
+        <link rel="apple-touch-icon" href="assets/img/apple-icon.png">
         <link rel="icon" type="image/png" href="assets/img/favicon.png">
 
         <title>front-end starter kit</title>
