--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
         <meta name="description" content="Baze is a front-end starter template">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
