--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
     <meta property="og:site_name" content="">
     <meta property="og:description" content="">
     <meta property="og:image" content="">
-    <meta property="og:type" content="">
+    <meta property="og:type" content="website">
     <meta property="fb:app_id" content="">
 
     <meta name="twitter:card" content="">
