Suitbaze now has ability to load additional scripts

--- a/home.html
+++ b/home.html
@@ -40,5 +40,8 @@
     
     <script>window.myPrefix = '';</script>
     <script src="assets/js/main.min.js"></script>
+
+    <!-- Load addition backend script if there are any -->
+    <script data-src=""></script>
 </body>
 </html>
