--- a/home.html
+++ b/home.html
@@ -38,6 +38,7 @@
     <h1>Baze - Front-end starter kit</h1>
 
     <script>window.myPrefix = '';</script>
+    <script src="https://cdn.polyfill.io/v2/polyfill.js?features=default,promise,fetch"></script>
     <script src="assets/js/main.min.js"></script>
 
     <!-- Load addition backend script if there are any -->
