--- a/home.html
+++ b/home.html
@@ -38,10 +38,8 @@
     <h1>Baze - Front-end starter kit</h1>
 
     <script>window.myPrefix = '';</script>
+    <script src="assets/js/vendor/jquery.min.js"></script>
     <script src="https://cdn.polyfill.io/v2/polyfill.js?features=default,promise,fetch"></script>
     <script src="assets/js/main.min.js"></script>
-
-    <!-- Load addition backend script if there are any -->
-    <script data-src=""></script>
 </body>
 </html>
