Use minifed version of polyfill.io
close #144

--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
 
     <h1>Suit Baze - front-end starter kit</h1>
 
-    <script src="https://cdn.polyfill.io/v2/polyfill.js?features=default,promise,fetch"></script>
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=default,promise,fetch"></script>
     <script src="assets/js/vendor/jquery.min.js"></script>
     <script src="assets/js/vendor/object-fit-images.min.js"></script>
     <script src="assets/js/main.min.js"></script>
