Implement sticky footer layout by default

--- a/home.html
+++ b/home.html
@@ -35,7 +35,11 @@
         <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <h1>Suit Baze - front-end starter kit</h1>
+    <div class="sticky-footer-container">
+        <div class="sticky-footer-container-item">Header</div>
+        <div class="sticky-footer-container-item --pushed">Content</div>
+        <div class="sticky-footer-container-item">Footer</div>
+    </div>
 
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=default,promise,fetch"></script>
     <script src="assets/js/vendor/jquery.min.js"></script>
