--- a/home.html
+++ b/home.html
@@ -44,6 +44,7 @@
     <script src="assets/js/vendor/modernizr.min.js" defer></script>
     <script src="assets/js/vendor/jquery.min.js" defer></script>
     <script src="assets/js/vendor/object-fit-images.min.js" defer></script>
+    <script src="assets/js/vendor/slick.min.js" defer></script>
     <script src="assets/js/main.min.js" defer></script>
 </body>
 </html>
