--- a/home.html
+++ b/home.html
@@ -45,6 +45,8 @@
     <script src="assets/js/vendor/jquery.min.js" defer></script>
     <script src="assets/js/vendor/object-fit-images.min.js" defer></script>
     <script src="assets/js/vendor/slick.min.js" defer></script>
+    <script src="assets/js/vendor/sprintf.min.js" defer></script>
+    <script src="assets/js/vendor/baze.validate.min.js" defer></script>
     <script src="assets/js/main.min.js" defer></script>
 </body>
 </html>
